<resources>
    <string name="app_name">ReSaPras</string>
    <string name="resarpras">ReSarPras</string>
    <string name="username">Username</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="dashboard">Dashboard</string>
    <string name="daftar_laporan">Daftar Laporan</string>
    <string name="laporan_baru">Laporan Baru</string>
    <string name="diproses">Diproses</string>
    <string name="selesai">Selesai</string>
    <string name="ditolak">Ditolak</string>
    <string name="atur_cept">Atur Cepat</string>
    <string name="buat_laporan">Buat Laporan</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="total_laporan">Total Laporan</string>
    <string name="laporan_belum_diverifikasi">Laporan Belum Diverifikasi</string>
    <string name="laporan_diproses">Laporan diproses</string>
    <string name="laporan_ditindak">Laporan ditindak</string>
    <string name="laporan_ditolak">Laporan ditolak</string>
    <string name="buat_laporan_baru">+ Buat Laporan</string>
    <string name="rsp">RSP</string>
    <string name="nama">Nama Lengkap</string>
    <string name="ph_nama">Masukan Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="ph_email">Masukan Email</string>
    <string name="no_handphone">No. Handphone"</string>
    <string name="ph_no_handphone">Masukan No. Handphone</string>
    <string name="sandi">Sandi</string>
    <string name="ph_sandi">Masukan Sandi"</string>
    <string name="register">Register</string>
    <string name="login">Log in</string>
    <string name="placeholder_num">78</string>
    <string name="_2026_01_12_09_22_12">2026-01-12 09:22:12</string>
    <string name="rpt_2026_000031">RPT-2026-000031</string>
    <string name="pencemaran">Pencemaran</string>
    <string name="tinggi">Tinggi</string>
    <string name="detail">Detail</string>
    <string name="cp_footer">©ReSarPras by Kelompok 4</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="pilih_file">+ Pilih File</string>

    <string-array name="kategori_array">
        <item>Laporan Fasilitas</item>
        <item>Laporan Kebersihan</item>
        <item>Laporan Keamanan</item>
    </string-array>

    <string-array name="lokasi_array">
        <item>R. 101</item>
        <item>R. 102</item>
        <item>R. 103</item>
        <item>R. 104</item>
        <item>R. 201</item>
        <item>R. 202</item>
        <item>R. 203</item>
        <item>R. 204</item>
        <item>R. 205</item>
        <item>R. 206</item>
        <item>R. 207</item>
        <item>R. 208</item>
        <item>R. 201</item>
        <item>R. 202</item>
        <item>R. 203</item>
        <item>R. 204</item>
        <item>R. 205</item>
        <item>R. 206</item>
        <item>R. 207</item>
        <item>R. 208</item>
        <item>R. 301</item>
        <item>R. 302</item>
        <item>R. 303</item>
        <item>R. 304</item>
        <item>R. 305</item>
        <item>R. 306</item>
        <item>R. 307</item>
        <item>R. 308</item>
        <item>R. 401</item>
        <item>R. 402</item>
        <item>R. 403</item>
        <item>R. 404</item>
        <item>R. 405</item>
        <item>R. 406</item>
        <item>R. 407</item>
        <item>R. 408</item>
        <item>Kmr. Mandi L Lt. 1</item>
        <item>Kmr. Mandi P Lt. 1</item>
        <item>Kmr. Mandi L Lt. 2</item>
        <item>Kmr. Mandi P Lt. 2</item>
        <item>Kmr. Mandi L Lt. 3</item>
        <item>Kmr. Mandi P Lt. 3</item>
        <item>Kmr. Mandi L Lt. 4</item>
        <item>Kmr. Mandi P Lt. 4</item>
    </string-array>
</resources>