<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".SignUp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="24dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:contentDescription="@null"/>

        <TextView
            android:id="@+id/rsp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/rsp"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:fontFamily="@font/rsp"/>

        <TextView
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textSize="18sp"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/ph_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ph_nama"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/white_email"
            android:textSize="16sp"
            android:layout_marginBottom="18dp"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/ph_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ph_email"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/white_email"
            android:textSize="16sp"
            android:layout_marginBottom="18dp"
            android:inputType="textEmailAddress"/>

        <TextView
            android:id="@+id/no_handphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_handphone"
            android:textSize="18sp"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/ph_no_handphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ph_no_handphone"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/white_email"
            android:textSize="16sp"
            android:layout_marginBottom="18dp"
            android:inputType="phone"/>

        <TextView
            android:id="@+id/sandi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sandi"
            android:textSize="16sp"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/ph_sandi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ph_sandi"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/white_email"
            android:textSize="16sp"
            android:layout_marginBottom="18dp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginTop="15dp"
            android:backgroundTint="#52739D"
            android:textColor="@color/white"
            android:textSize="20sp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>