<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bcolorMain"
    android:paddingBottom="24dp">
    <LinearLayout
        android:id="@+id/profileInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="20dp"
        android:paddingTop="40dp"
        android:paddingBottom="30dp"
        android:background="@drawable/border">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/profile"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp">
            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_gmail_com"
                android:textColor="@color/white_email"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/dashboardNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">
        <TextView
            android:id="@+id/text_dashboardNav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:drawableStart="@drawable/baseline_space_dashboard_24"
            android:drawablePadding="20dp"
            android:layout_marginVertical="25dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/daftarlaporanNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">
        <TextView
            android:id="@+id/text_daftarlaporanNav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar_laporan"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:drawableStart="@drawable/baseline_file_24"
            android:drawablePadding="20dp"
            android:layout_marginVertical="25dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buatlaporanNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">
        <TextView
            android:id="@+id/text_buatlaporanNav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buat_laporan"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:drawableStart="@drawable/baseline_note_add_24"
            android:drawablePadding="20dp"
            android:layout_marginVertical="25dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:src="@drawable/logo"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:id="@+id/rsp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/rsp"
        android:textSize="60sp"
        android:textColor="@color/white"
        android:fontFamily="@font/rsp"
        android:layout_marginBottom="50dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cp_footer"
        android:textSize="20sp"
        android:textColor="@color/white_email"
        android:textAlignment="center"/>
</LinearLayout>